k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-microservice
  template:
    metadata:
      labels:
        app: stock-microservice
    spec:
      containers:
        - name: stock-microservice-container
          image: stock-microservice-latest
          ports:
            - containerPort: 8080
