k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-registry
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "vpc"
spec:
  type: ClusterIP
  selector:
    app: user-registry
    tier: frontEnd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
