k8s/stock-performance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-performance
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "vpc"
spec:
  type: ClusterIP
  selector:
    app: stock-performance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
